# EEG-task-data-server

./: .gitignore  Dockerfile  README.md  app.py  config.py  config.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  running_the_server.md  server.py  test_api.py
local_data_storage/: __init__.py
local_data_storage/api/: __init__.py  handlers.py
local_data_storage/config/: __init__.py
